--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         }
       </script>
     <style>
+      *{ 
+        margin: 0;
+        padding: 0;
+      }
         .manrope-font{
             font-family: "Manrope", sans-serif;
         }
@@ -225,17 +229,17 @@
                   <!-- footer section -->
 
     <footer>
-      <div class="px-48 py-10 bg-base-200">
-        <div class="flex justify-between my-14">
-          <div>
+      <div class="px-24 py-10 bg-base-200">
+        
+          <div class="flex space-x-10 justify-between py-24">
             <img src="images/cup.png" alt="">
+            <p>
+              <span>Ready to get started?</span>
+              <button class="btn btn-error">GET STARTED</button>
+            </p>
           </div>
-          <div class="flex space-x-4">
-            <h4 class="flex items-center pb-4 ">Ready to get started?</h4>
-            <button class="btn btn-error">GET STARTED</button>
-          </div>
-        </div>
-         <div class="footer text-base-content">
+
+         <div class="footer grid grid-cols-2  text-base-content">
     <nav>
       <h6 class="footer-title">Services</h6> 
       <a class="link link-hover">Branding</a>
